@@ -1723,12 +1723,20 @@ bool Mob::HasNPCSpecialAtk(const char* parse) {
 void NPC::FillSpawnStruct(NewSpawn_Struct* ns, Mob* ForWho)
 {
 	Mob::FillSpawnStruct(ns, ForWho);
-	if(GetOwnerID())
+	if(GetOwnerID() || GetSwarmOwner())
 	{
 		ns->spawn.is_pet = 1;
-		Client *c = entity_list.GetClientByID(GetOwnerID());
-		if(c)
-			sprintf(ns->spawn.lastName, "%s's Pet", c->GetName());
+		if (GetOwnerID()) {
+			Client *c = entity_list.GetClientByID(GetOwnerID());
+			if(c)
+				sprintf(ns->spawn.lastName, "%s's Pet", c->GetName());
+		}
+		else if (GetSwarmOwner()) {
+			ns->spawn.bodytype = 11;
+			Client *c = entity_list.GetClientByID(GetSwarmOwner());
+			if(c)
+				sprintf(ns->spawn.lastName, "%s's Pet", c->GetName());
+		}
 	}
 	else
 		ns->spawn.is_pet = 0;
