@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==12/1/2012==
+Vaion: Swarm Pets are now untargetable.  They still gain aggro, are attackable and can be casted on by NPCs, but clients cannot target them.
+
 ==11/27/2012==
 Sorvani: fix for newly created items with unlmiited charges to actually be usable.
 Sorvani: (Uleat) Lore check is now made for items inside bags being trade before the trade completes.
